--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bearbnb</title>
     <script src="https://kit.fontawesome.com/8ed2f61178.js" crossorigin="anonymous"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
