--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="./images/logos/favicon_logo.png" />
     <title>Bearbnb</title>
     <script src="https://kit.fontawesome.com/8ed2f61178.js" crossorigin="anonymous"></script>
     <style>
